--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ repositories {
 }
 
 apply plugin: 'java'
+apply plugin: 'application'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
@@ -22,3 +23,5 @@ sourceSets {
         }
     }
 }
+
+mainClassName = "Main"
