--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ targetCompatibility = 1.8
 dependencies {
     compile "com.sparkjava:spark-core:2.7.2"
     compile "org.slf4j:slf4j-simple:1.7.21"
+    compile "com.heroku.sdk:heroku-maven-plugin:0.4.4"
 }
 
 sourceSets {
